--- a/src/main/resources/templates/home-view.html
+++ b/src/main/resources/templates/home-view.html
@@ -1,10 +1,69 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+        <link rel="stylesheet" th:href="@{/style.css}"/>
+    <title>Crossword Solver App</title>
 </head>
-<body>
 
+<body>
+<div class="content">
+    <h1>So you want to find a word without effort?</h1>
+    <p>To start, tell me how many letters your desired word consists of.</p>
+    <form name="wordLengthSelector" id="wordLengthForm" action="/crossword-solver/home" method="post">
+        <input type="radio" id="length3" name="wordLength" onchange="doJob(this)" value="3" style="display: none;">
+        <label for="length3" style="display: inline-block; cursor: pointer; margin-bottom: 5px; padding: 5px 10px; border: 1px solid #ccc;">3</label><br>
+
+        <input type="radio" id="length4" name="wordLength" onchange="doJob(this)" value="4" style="display: none;">
+        <label for="length4" style="display: inline-block; cursor: pointer; margin-bottom: 5px; padding: 5px 10px; border: 1px solid #ccc;">4</label><br>
+
+        <input type="radio" id="length5" name="wordLength" onchange="doJob(this)" value="5" style="display: none;">
+        <label for="length5" style="display: inline-block; cursor: pointer; margin-bottom: 5px; padding: 5px 10px; border: 1px solid #ccc;">5</label><br>
+
+        <input type="radio" id="length6" name="wordLength" onchange="doJob(this)" value="6" style="display: none;">
+        <label for="length6" style="display: inline-block; cursor: pointer; margin-bottom: 5px; padding: 5px 10px; border: 1px solid #ccc;">6</label><br>
+
+        <input type="radio" id="length7" name="wordLength" onchange="doJob(this)" value="7" style="display: none;">
+        <label for="length7" style="display: inline-block; cursor: pointer; margin-bottom: 5px; padding: 5px 10px; border: 1px solid #ccc;">7</label><br>
+
+        <input type="radio" id="length8" name="wordLength" onchange="doJob(this)" value="8" style="display: none;">
+        <label for="length8" style="display: inline-block; cursor: pointer; margin-bottom: 5px; padding: 5px 10px; border: 1px solid #ccc;">8</label><br>
+
+        <input type="radio" id="length9" name="wordLength" onchange="doJob(this)" value="9" style="display: none;">
+        <label for="length9" style="display: inline-block; cursor: pointer; margin-bottom: 5px; padding: 5px 10px; border: 1px solid #ccc;">9</label><br>
+
+        <input type="radio" id="length10" name="wordLength" onchange="doJob(this)" value="10" style="display: none;">
+        <label for="length10" style="display: inline-block; cursor: pointer; margin-bottom: 5px; padding: 5px 10px; border: 1px solid #ccc;">10</label><br>
+
+        <input type="radio" id="length11" name="wordLength" onchange="doJob(this)" value="11" style="display: none;">
+        <label for="length11" style="display: inline-block; cursor: pointer; margin-bottom: 5px; padding: 5px 10px; border: 1px solid #ccc;">11</label><br>
+
+        <input type="radio" id="length12" name="wordLength" onchange="doJob(this)" value="12" style="display: none;">
+        <label for="length12" style="display: inline-block; cursor: pointer; margin-bottom: 5px; padding: 5px 10px; border: 1px solid #ccc;">12</label><br>
+
+        <input type="radio" id="length13" name="wordLength" onchange="doJob(this)" value="13" style="display: none;">
+        <label for="length13" style="display: inline-block; cursor: pointer; margin-bottom: 5px; padding: 5px 10px; border: 1px solid #ccc;">13</label><br>
+
+        <input type="radio" id="length14" name="wordLength" onchange="doJob(this)" value="14" style="display: none;">
+        <label for="length14" style="display: inline-block; cursor: pointer; margin-bottom: 5px; padding: 5px 10px; border: 1px solid #ccc;">14</label><br>
+
+        <input type="radio" id="length15" name="wordLength" onchange="doJob(this)" value="15" style="display: none;">
+        <label for="length15" style="display: inline-block; cursor: pointer; margin-bottom: 5px; padding: 5px 10px; border: 1px solid #ccc;">15</label><br>
+    </form>
+    <div th:if="${stringToShow != null}" th:text="${stringToShow}"></div>
+</div>
+
+<script>
+    let form = document.forms.wordLengthSelector;
+
+    // form.wordLength.forEach(radio => radio.addEventListener('change', doJob)); // this could be used if you do not write onchange="doJob(this)" into each radio input
+
+    function doJob() {
+        form.addEventListener("change", function() {
+            form.submit();
+        });
+    }
+</script>
 </body>
 </html>
