--- a/src/main/resources/templates/crossword-view.html
+++ b/src/main/resources/templates/crossword-view.html
@@ -11,7 +11,7 @@
 <div class="content">
     <h1>So you want to find a word without effort?</h1>
     <p>To start, tell me how many letters your desired word consists of.</p>
-    <form name="wordLengthSelector" id="wordLengthForm" action="/crossword-solver/home" method="post">
+    <form name="wordLengthSelector" id="wordLengthForm" action="/words-solver/crossword" method="post">
 
         <input type="radio" id="length3" name="wordLength" value="3" style="display: none;"
                onclick="toggleSubmitButton()">
