--- a/src/main/resources/templates/word-builder-view.html
+++ b/src/main/resources/templates/word-builder-view.html
@@ -46,11 +46,10 @@
             input.type = 'text';
             input.name = 'letters';
             input.maxLength = 1;
-            input.pattern = '[A-Za-z]'; // Only allow alphabet letters
+            input.pattern = '[A-Za-z]';
             input.addEventListener('input', function (event) {
                 if (!/^[A-Za-z]+$/.test(event.target.value)) {
                     event.target.value = 'A';
-                    // alert('Please enter only alphabet letters.');
                     showToast('Please enter only alphabet letters.');
                 }
                 toggleSubmitButton();
