--- a/src/main/resources/templates/home-view.html
+++ b/src/main/resources/templates/home-view.html
@@ -10,7 +10,7 @@
 <p>Choose a game that you need to help with:</p>
 <a href="http://localhost:8080/words-solver/crossword">Crossword</a>
 <a href="http://localhost:8080/words-solver/word-builder">Word Builder</a>
-<a href="http://google.com">Word finder</a>
+<a href="http://localhost:8080/words-solver/all-word-builder">Word finder</a>
 
 </body>
 </html>
