add: change in styling, add images to template

--- a/src/main/resources/templates/all-word-builder-view.html
+++ b/src/main/resources/templates/all-word-builder-view.html
@@ -9,7 +9,7 @@
 
 <body>
 <div class="content">
-    <h1>So you want to find all words that can be built using some or all your letters?</h1>
+    <h2>So you want to find all words that can be built using some or all your letters?</h2>
     <p>To start, enter letters. You can enter up to 7 letters.</p>
     <form name="wordInputForm" id="wordInputForm" action="/words-solver/all-word-builder" method="post">
 
@@ -29,8 +29,8 @@
     </div>
 
 </div>
-<div>
-    <a href="http://localhost:8080/words-solver/home">Back to home page</a>
+<div class="home-page-link-container">
+    <a class="home-page-link" href="http://localhost:8080/words-solver/home">Back to home page</a>
 </div>
 
 <script>
