--- a/src/main/resources/templates/crossword-view.html
+++ b/src/main/resources/templates/crossword-view.html
@@ -9,7 +9,7 @@
 
 <body>
 <div class="content">
-    <h1>So you want to find a word that would fit nicely into your crossword?</h1>
+    <h2>So you want to find a word that would fit nicely into your crossword?</h2>
     <p>To start, tell me how many letters your desired word consists of.</p>
     <form name="wordLengthSelector" id="wordLengthForm" action="/words-solver/crossword" method="post">
 
@@ -80,8 +80,8 @@
     </div>
 
 </div>
-<div>
-    <a href="http://localhost:8080/words-solver/home">Back to home page</a>
+<div class="home-page-link-container">
+    <a class="home-page-link" href="http://localhost:8080/words-solver/home">Back to home page</a>
 </div>
 
 <script>
