--- a/src/main/resources/templates/home-view.html
+++ b/src/main/resources/templates/home-view.html
@@ -6,11 +6,48 @@
     <title>Crossword Solver App</title>
 </head>
 <body>
-<h1>Welcome to my page dedicated for finding words when you are stuck in game.</h1>
+<h2>Are you stuck in some kind of words game?
+    Feel free to use one of these word builders based on your requirements.</h2>
 <p>Choose a game that you need to help with:</p>
-<a href="http://localhost:8080/words-solver/crossword">Crossword</a>
-<a href="http://localhost:8080/words-solver/word-builder">Word Builder</a>
-<a href="http://localhost:8080/words-solver/all-word-builder">Word finder</a>
+<div class="link-container">
+    <div class="link-sub-container">
+        <div class="link-text-sub-container">
+        <a href="http://localhost:8080/words-solver/crossword">Crossword Solver</a>
+        </div>
+        <div class="link-img-sub-container">
+            <a class="left-image" href="http://localhost:8080/words-solver/crossword"><img src="/crossword_example.png" alt="Crossword Solver"/></a>
+            <img class="center-image" src="/crossword_input.png" alt="Crossword Input"/>
+            <img class="right-image" src="/crossword_output.png" alt="Crossword Output"/>
+        </div>
+    </div>
+
+    <div class="link-sub-container">
+        <div class="link-text-sub-container">
+        <a href="http://localhost:8080/words-solver/word-builder">Fixed Length
+            Word Builder</a>
+        </div>
+        <div class="link-img-sub-container">
+            <a class="left-image" href="http://localhost:8080/words-solver/word-builder"><img src="/word_builder_example.png" alt="Fixed Length Word Builder"/></a>
+            <img class="center-image" src="/word_builder_input.png" alt="Word Builder Input"/>
+            <img class="right-image" src="/fixed_word_builder_output.png" alt="Fixed Length Word Builder Output"/>
+        </div>
+    </div>
+
+
+    <div class="link-sub-container">
+        <div class="link-text-sub-container">
+        <a href="http://localhost:8080/words-solver/all-word-builder">Flexible Length
+            Word Builder</a>
+        </div>
+        <div class="link-img-sub-container">
+            <a class="left-image" href="http://localhost:8080/words-solver/all-word-builder"><img src="/word_builder_example.png" alt="Flexible Length Words Builder"/></a>
+            <img class="center-image" src="/word_builder_input.png" alt="Word Builder Input"/>
+            <img class="right-image" src="/flexible_word_builder_output.png" alt="Flexible Length Word Builder Output"/>
+        </div>
+    </div>
+
+</div>
+
 
 </body>
 </html>
