--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,3 +1,13 @@
+h2 {
+    font-family: "Arial", sans-serif;
+    font-size: 30px;
+}
+
+p {
+    font-family: "Arial", sans-serif;
+    font-size: 20px;
+}
+
 input[type="radio"] {
     display: none;
 }
@@ -66,15 +76,6 @@ label {
     margin-bottom: 5px;
 }
 
-
-
-
-
-
-
-
-
-
 #toast {
     visibility: hidden;
     min-width: 250px;
@@ -90,32 +91,150 @@ label {
     bottom: 30px;
     font-size: 17px;
 }
+
 #toast.show {
     visibility: visible;
     -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
     animation: fadein 0.5s, fadeout 0.5s 2.5s;
 }
+
 @-webkit-keyframes fadein {
-    from {bottom: 0; opacity: 0;}
-    to {bottom: 30px; opacity: 1;}
+    from {
+        bottom: 0;
+        opacity: 0;
+    }
+    to {
+        bottom: 30px;
+        opacity: 1;
+    }
 }
+
 @keyframes fadein {
-    from {bottom: 0; opacity: 0;}
-    to {bottom: 30px; opacity: 1;}
+    from {
+        bottom: 0;
+        opacity: 0;
+    }
+    to {
+        bottom: 30px;
+        opacity: 1;
+    }
 }
+
 @-webkit-keyframes fadeout {
-    from {bottom: 30px; opacity: 1;}
-    to {bottom: 0; opacity: 0;}
+    from {
+        bottom: 30px;
+        opacity: 1;
+    }
+    to {
+        bottom: 0;
+        opacity: 0;
+    }
 }
+
 @keyframes fadeout {
-    from {bottom: 30px; opacity: 1;}
-    to {bottom: 0; opacity: 0;}
+    from {
+        bottom: 30px;
+        opacity: 1;
+    }
+    to {
+        bottom: 0;
+        opacity: 0;
+    }
 }
 
+.link-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
-img.resized {
-    width: 15%; /* Occupies 1/10 of the page width */
-    height: 15%; /* Replace 300px with the desired height in pixels */
-    max-width: none; /* Disable max-width constraint */
-    max-height: none; /* Disable max-height constraint */
+.link-sub-container {
+    max-width: 90%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    margin: 0 auto 20px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.link-sub-container > * {
+    margin: 10px;
+    max-width: 100%;
+    height: auto;
+    max-height: 200px;
+}
+
+.link-text-sub-container a {
+    text-decoration: none;
+    color: #333;
+    font-size: 18px;
+    font-weight: bold;
+    padding: 10px 20px;
+    border: 2px solid #ccc;
+    border-radius: 20px;
+    background-color: #f0f0f0;
+    transition: all 0.3s ease;
+}
+
+.link-text-sub-container a:hover {
+    background-color: #ccc;
+    color: #fff;
+}
+
+.link-img-sub-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.link-img-sub-container > * {
+    margin: 10px;
+    max-width: 30%;
+    height: auto;
+    max-height: 200px;
+}
+
+.link-img-sub-container a > img {
+    max-width: 100%;
+    max-height: 200px
+}
+
+.left-image,
+.center-image,
+.right-image {
+    flex: 0 0 calc(33% - 20px);
+    max-width: calc(33% - 20px);
+    height: auto;
+    margin: 10px;
+}
+
+.left-image {
+    justify-self: flex-start;
+}
+
+.center-image {
+    justify-self: center;
+}
+
+.right-image {
+    justify-self: flex-end;
+}
+
+.home-page-link {
+    text-decoration: none;
+    color: #333;
+    font-size: 18px;
+    font-weight: bold;
+    padding: 10px 20px;
+    border: 2px solid #ccc;
+    border-radius: 20px;
+    background-color: #f0f0f0;
+    transition: all 0.3s ease;
+    position: relative;
+    z-index: 1;
+}
+
+.home-page-link-container {
+    margin: 5% 10px;
 }
