--- a/src/main/resources/templates/all-word-builder-view.html
+++ b/src/main/resources/templates/all-word-builder-view.html
@@ -49,11 +49,14 @@
             input.pattern = '[A-Za-z]';
             input.addEventListener('input', function (event) {
                 if (!/^[A-Za-z]+$/.test(event.target.value)) {
-                    event.target.value = 'A';
-                    showToast('Please enter only alphabet letters.');
+                    if (event.inputType !== "deleteContentBackward" && event.inputType !== "deleteContentForward") {
+                        event.target.value = 'A';
+                        showToast('Please enter only alphabet letters.');
+                    }
                 }
                 toggleSubmitButton();
             });
+
             container.appendChild(input);
         }
     }
