--- a/src/main/resources/templates/home-view.html
+++ b/src/main/resources/templates/home-view.html
@@ -6,43 +6,61 @@
     <title>Crossword Solver App</title>
 </head>
 <body>
-<h2>Are you stuck in some kind of words game?
-    Feel free to use one of these word builders based on your requirements.</h2>
-<p>Choose a game that you need to help with:</p>
+<h2>Are you stuck in some kind of words game?</h2>
+<h2>Try out one of these cheating apps:</h2>
+
 <div class="link-container">
     <div class="link-sub-container">
-        <div class="link-text-sub-container">
-        <a th:href="@{/crossword}">Crossword Solver</a>
+        <div class="link-sub-container-left">
+            <div class="link-text-sub-container">
+                <a th:href="@{/crossword}">Crossword Solver</a>
+            </div>
+            <div class="link-img-sub-container">
+                <a class="left-image" th:href="@{/crossword}"><img src="/crossword450px.png" alt="Crossword Solver"/></a>
+            </div>
         </div>
-        <div class="link-img-sub-container">
-            <a class="left-image" th:href="@{/crossword}"><img src="/crossword_example.png" alt="Crossword Solver"/></a>
-            <img class="center-image" src="/crossword_input.png" alt="Crossword Input"/>
-            <img class="right-image" src="/crossword_output.png" alt="Crossword Output"/>
+        <div class="link-sub-container-right">
+            <div class="link-description-container">
+                <h5>DESCRIPTION:</h5>
+                <p>information about this</p>
+            </div>
         </div>
     </div>
 
     <div class="link-sub-container">
+        <div class="link-sub-container-left">
         <div class="link-text-sub-container">
         <a th:href="@{/word-builder}">Fixed Length
             Word Builder</a>
         </div>
         <div class="link-img-sub-container">
-            <a class="left-image" th:href="@{/word-builder}"><img src="/word_builder_example.png" alt="Fixed Length Word Builder"/></a>
-            <img class="center-image" src="/word_builder_input.png" alt="Word Builder Input"/>
-            <img class="right-image" src="/fixed_word_builder_output.png" alt="Fixed Length Word Builder Output"/>
+            <a class="left-image" th:href="@{/word-builder}"><img src="/fixed450px.png" alt="Fixed Length Word Builder"/></a>
+        </div>
+        </div>
+        <div class="link-sub-container-right">
+            <div class="link-description-container">
+                <h5>DESCRIPTION:</h5>
+                <p>information about this</p>
+            </div>
         </div>
     </div>
 
 
     <div class="link-sub-container">
+        <div class="link-sub-container-left">
         <div class="link-text-sub-container">
         <a th:href="@{/all-word-builder}">Flexible Length
             Word Builder</a>
         </div>
         <div class="link-img-sub-container">
-            <a class="left-image" th:href="@{/all-word-builder}"><img src="/word_builder_example.png" alt="Flexible Length Words Builder"/></a>
-            <img class="center-image" src="/word_builder_input.png" alt="Word Builder Input"/>
-            <img class="right-image" src="/flexible_word_builder_output.png" alt="Flexible Length Word Builder Output"/>
+            <a class="left-image" th:href="@{/all-word-builder}"><img src="/flex450px.png" alt="Flexible Length Words Builder"/></a>
+        </div>
+        </div>
+        <div class="link-sub-container-right">
+            <div class="link-description-container">
+                <h5>DESCRIPTION:</h5>
+                <p>information about this</p>
+            </div>
         </div>
     </div>
 
